removed flex from body and html tags in an attempt to fix the style bug on ios.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -15,9 +15,9 @@ a {
 
 // reset default browser css
 body, html {
-  display: flex;
-  flex-direction: column;
-  align-content: space-between;
+  // display: flex;
+  // flex-direction: column;
+  // align-content: space-between;
   min-height: 100vh;
   width: 100%;
   height: 100%;
